corpus/c/preprocessor_directive/case-01/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.c:1:2: error: [syntax] #error macro guard missing
raw : #error macro guard missing
| src/main.c:1:2
| #error macro guard missing
|  ^
macro: preserved